syntax = "proto3";

option java_package = "org.example.grpc.common.generated";
option java_multiple_files = true;

enum BookType {
  BOOK = 0;
  JOURNAL = 1;
  COMIC_BOOK = 2;
}

message Book {
  int32 ISBN = 1;
  string title = 2;
  string author = 3;
  BookType bookType = 4;
}

message BookList {
  repeated Book book = 1;
}

message ISBN {
    int32 code = 1;
}

service BookService {
  rpc createBooks(BookList) returns (BookList);
  rpc findBookByISBN(ISBN) returns (Book);
}